fixes alignment issues in belief.scss

--- a/scss/belief.scss
+++ b/scss/belief.scss
@@ -1,12 +1,18 @@
 @import '_base.scss';
 
 main {
-    h2,h3,h4,p {
+    h2,h3,h4,p,ul {
         text-align: left;
+        padding-left: 0;
     }
     img {
         padding: 30px 0;
         text-align: center;
+    }
+    ul {
+        h4 {
+            padding-left: 15px;
+        }
     }
 
     // Trial Design
